сделала свою страничку

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <left><h1>Арина Бондаренко</h1></left> 
 <left><img alt="Это я" width="15%" src="me.jpg"></left> 
 <br/> 
+<p> Студентка 1 курса Факультета Гуманитарных наук НИУ ВШЭ, напрвление История.
 <h2>Контакты:</h2> 
-Страничка <a href=https://vk.com/id180321640/>vkontakte</a> 
+Страничка <a href=https://vk.com/id180321640>vkontakte</a> 
 <br/> 
 <a href=https://github.com/arinabondarenko>GitHub</a> 
 <br/> 
