--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <title>Моя личная страничка</title> 
 </head> 
 <body> 
-<left><h1>Арина Бондаренко</h1></left> 
+<left><h1>Арина Бонадаренко</h1></left> 
 <left><img alt="Это я" width="15%" src="me.jpg"></left> 
 <br/> 
-<p> Студентка 1 курса Факультета Гуманитарных наук НИУ ВШЭ, напрвление История.
+<p> Студентка 1 курса Факультета Гуманитарных наук НИУ ВШЭ, направление История. Люблю путшешествия, цифровую грамотность и историю!!!
 <h2>Контакты:</h2> 
 Страничка <a href=https://vk.com/id180321640>vkontakte</a> 
 <br/> 
