сделала свою страничку

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <left><h1>Арина Бонадаренко</h1></left> 
 <left><img alt="Это я" width="15%" src="me.jpg"></left> 
 <br/> 
-<p> Студентка 1 курса Факультета Гуманитарных наук НИУ ВШЭ, направление История. Люблю путешествия, цифровую грамотность и историю!!!
+<p> Студентка 1 курса Факультета Гуманитарных наук НИУ ВШЭ, направление История. Люблю путешествия и историю!!!
 <h2>Контакты:</h2> 
 Страничка <a href=https://vk.com/id180321640>vkontakte</a> 
 <br/> 
